--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 "name": "PORTFOLIO-",
     "version": "0.0.1",
     "description": "A multi functional whatsapp bot Web paircode.",
-    "main": "index.html",
+    "main": "index..js",
     "scripts": {
       "start": "pm2 start index.js --deep-monitoring --attach --name vajira-md",
       "stop": "pm2 stop vajira-md",
